--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  username: MyString
-  password: MyString
-  counter: 1
+  username: Romeo
+  password_digest: <%= BCrypt::Password.create("ilovejuliet") %>
+  counter: 100
 
 two:
-  username: MyString
-  password: MyString
+  username: Juliet
+  password_digest: <%= BCrypt::Password.create("ihateromeo") %>
   counter: 1
